<resources>
    <string name="app_name">SeatingArrangement</string>
    <string name="Welcome_message">ようこそ！&lt;br&gt;&lt;big&gt;席替えアプリ&lt;/big&gt;です。</string>
    <string name="Start">始める</string>
    <string name="Continue">続きから</string>

    <string name="Ask_for_num_of_row_and_column">大きさを決定し、空席を除外</string>
    <string name="Ask_to_set_using_scopes">使用するスコープを設定</string>

    <string name="Num_of_row">行数</string>
    <string name="Unit_of_row">行</string>
    <string name="Num_of_column">列数</string>
    <string name="Unit_of_column">列</string>
    <string name="OK">決定</string>
    <string name="Next">次へ</string>

    <string name="Title_PreparingGrid">処理中</string>
    <string name="Message_PreparingGrid">すこしまってね</string>

    <string name="Ask_for_GridName">座席表の名前を入力</string>
    <string name="Title_SeatGrid_CouldNotBeAdded">座席表作成に失敗</string>

    <!--Grid内のTextView用-->
    <string name="EmptySeat">（空席）</string>


    <!--Lottery内-->
    <string name="ManualSetting">手動設定</string>
    <string name="StartLottery">くじ引きを始める</string>

    <!--ManualSetting-->
    <string name="Cancel">キャンセル</string>
    <string name="AlertDialogTitle_HasDuplication">重複する項目があります</string>
    <string name="AlertDialogMessage_HasDuplication">重複を解消してください</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
