<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputRowAndColumnFragment">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/button_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_OK"
        android:layout_marginStart="13dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/button_OK"
        android:text="@string/Next"
        android:visibility="visible" />

    <LinearLayout
        android:id="@+id/LinearLayout_input_row_and_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_ask_for_row_and_column"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_num_of_row"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Num_of_row"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_row"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_unit_of_row"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Unit_of_row"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView_num_of_column"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/Num_of_column"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/spinner_column"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/textView_unit_of_column"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/Unit_of_column"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_ask_for_row_and_column"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:text="@string/Ask_for_row_and_column"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button_OK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/LinearLayout_input_row_and_column"
        android:layout_marginStart="13dp"
        android:layout_marginLeft="13dp"
        android:layout_marginTop="-9dp"
        android:layout_toEndOf="@+id/LinearLayout_input_row_and_column"
        android:layout_toRightOf="@+id/LinearLayout_input_row_and_column"
        android:text="@string/OK" />



</RelativeLayout>