<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RowAndColumnActivity">


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/button_OK"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="3dp"
            android:layout_marginRight="3dp"
            android:text="@string/Next"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/LinearLayout_input_row_and_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_ask_for_row_and_column"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_num_of_row"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Num_of_row"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_row"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/RowAndColumn_items" />

            <TextView
                android:id="@+id/textView_unit_of_row"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Unit_of_row"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textView_num_of_column"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="50dp"
                android:layout_weight="1"
                android:text="@string/Num_of_column"
                android:textSize="24sp" />

            <Spinner
                android:id="@+id/spinner_column"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:entries="@array/RowAndColumn_items" />

            <TextView
                android:id="@+id/textView_unit_of_column"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/Unit_of_column"
                android:textSize="24sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_ask_for_row_and_column"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="0dp"
            android:text="@string/Ask_for_row_and_column"
            android:textSize="30sp" />

        <Button
            android:id="@+id/button_OK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/LinearLayout_input_row_and_column"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:layout_marginTop="-9dp"
            android:layout_toEndOf="@+id/LinearLayout_input_row_and_column"
            android:layout_toRightOf="@+id/LinearLayout_input_row_and_column"
            android:text="@string/OK" />

    </RelativeLayout>

    <HorizontalScrollView
        android:id="@+id/horizontalScrollView_ForGrid"
        android:layout_width="548dp"
        android:layout_height="235dp"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="72dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left">

            <RelativeLayout
                android:id="@+id/GridContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </ScrollView>


    </HorizontalScrollView>

    <HorizontalScrollView
        android:id="@+id/Horizontal_ForColNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView_ForGrid"
        app:layout_constraintEnd_toEndOf="@+id/horizontalScrollView_ForGrid"
        app:layout_constraintStart_toStartOf="@+id/horizontalScrollView_ForGrid"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:id="@+id/LinearLayout_rowNums"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:minWidth="@string/GridSize"
            android:orientation="horizontal" />
    </HorizontalScrollView>

    <ScrollView
        android:id="@+id/ScrollView_ForRowNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView_ForGrid"
        app:layout_constraintEnd_toStartOf="@+id/horizontalScrollView_ForGrid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView_ForGrid">

        <LinearLayout
            android:id="@+id/LinearLayout_colNums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:minHeight="@string/GridSize"
            android:orientation="vertical" />
    </ScrollView>


</android.support.constraint.ConstraintLayout>